# vin-decode

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  refresh-vpic.yml
data/: VERSION  eu_brand_models.bin.zst  eu_brand_models.fst  eu_engines.bin.zst  eu_engines.fst  make_models.bin.zst  make_models.fst  makes.fst  schema_lookup.fst  wmi_make.bin.zst  wmi_make.fst  wmi_rules.bin.zst  wmi_rules.fst  wmi_schema.bin.zst  wmi_schema.fst
data-rip/: brand_models.tsv  brands.tsv  wmi_merged.tsv  wmi_rules.tsv
src/: build.rs  catalog.rs  check_digit.rs  country.rs  data.rs  decoder.rs  element.rs  embedded.rs  error.rs  lib.rs  maps.rs  pattern.rs  types.rs  wmi.rs  year.rs
tests/: build_pipeline.rs  catalog.rs  cross_reference.rs  decoder.rs  eu_corpus.rs  pattern_decode.rs  stress.rs  sunrise_php_fixtures.rs  vingo_fixtures.rs  vininfo_fixtures.rs
tests/common/: mod.rs
tests/data/: eu_corpus.csv
